TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix installer (after configuration UI)
 * Add module for relaying events
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)

2008-02-04 MickeM
 *** Happy Birthday bogi!! :)
 * Fixed issues with performance counter rendering (mainly checkDisk)

2008-02-03 MickeM
 + Added encryption subsystem to NSCA module (still no mcrypt support, but atleast you have "xor" and passwords)
 + Added API for scripts to register commands
 + Added command descriptions (for some modules)
 * Fixed issue in NRPE that displayed a console window when running commands
 * New improved "inject" dialog from the system tray
   Lists avalible commands, and shows command descriptions and a lot of other improvments.
 + Added an internal log windows that displays log in realtime.
 + Fixed some issues with the dialog procs (should work smoother now, especially Termination)

2008-02-02 MickeM
 * Might have fixed the "missing eventlog messages" problem.
 + Added %count% parameter to syntax which (when used with unique) will display the numbe of hits for each message displayed.

2008-01-27 MickeM
 * Fixed a memory-leak in format_time
 * Fixed so time/date is displayed in "local time" (not UTC) for the eventlog check
 + Added %message% to evenlog check. Will display the "proper formated eventlog message" as in the eventlog viewer.
   For this to work you need to have the descriptions flag set
   In short: /nrpe -H 192.168.0.147 -c checkEventLog -a truncate=1024 "syntax=%generated%: %message%" descriptions=true file=System MaxWarn=1 MaxCrit=1 filter+eventType==error filter+generated=\<12h filter=new filter=all filter=in
 + Added option "unique" to CheckEventLog If this is present only unique errors will be returned.
   The uniqueness is defined by event-log, event-source, event-id and event-category.

2007-12-16 MickeM